<package format="2">
    <name>tower_flare_gazebo</name>
    <version>0.0.1</version>

    <description>Pacote de simulação de inspençao de torre flire de petróleo</description>

    <maintainer email="diogo.henrique@grad.ufsc.br">Diogo Henrique Fragoso de Oliveira</maintainer>

    <author>Diogo Henrique</author>
    <author>Jhonata Peixoto</author>


    <license>ASL 2.0</license>


    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_msgs</depend>
    <depend>gazebo_plugins</depend>
    <depend>geometry_msgs</depend>
    <depend>mav_msgs</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>xacro</depend>

</package>
