<?xml version="1.0"?>
<package format="2">
    <name>tower_flare_simulator</name>
    <version>0.0.1</version>
    <description>Pacote de simulação de inspençao de torre flire de petróleo</description>

    <maintainer email="diogo.henrique@grad.ufsc.br">Diogo Henrique Fragoso de Oliveira</maintainer>

    <author>Diogo Henrique</author>
    <author>Jonatas</author>

    <license>ASL 2.0</license>

    <url type="website">http://wiki.ros.org/tower_flire_simulator</url>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>rotors_simulator</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <metapackage/>
    </export>
</package>
